# Clover

./: .gitignore  CMakeLists.txt  EnumConverter.h  README.md  USER-README.md  animation.cpp  animation.h  balloon.cpp  balloon.h  balloonwidget.cpp  balloonwidget.h  filereader.cpp  filereader.h  frame.cpp  frame.h  ghost.cpp  ghost.h  ghostwidget.cpp  ghostwidget.h  main.cpp  mainprocess.cpp  mainprocess.h  mytextbrowser.cpp  mytextbrowser.h  surface.cpp  surface.h  surface_enums.h  surfacemanager.cpp  surfacemanager.h  talkmanager.cpp  talkmanager.h  talkparser.cpp  talkparser.h  token.cpp  token.h  tokencollection.cpp  tokencollection.h
data/: CREDITS.txt  Clover - Create a mascot.html  anchors.json  (+11 more)
src/: CMakeLists.txt  main.cpp
src/common/: enumconverter.h
src/filereader/: filereader.cpp  filereader.h
src/inputreceiver/: CMakeLists.txt  inputreceiver.cpp  inputreceiver.h
src/mainprocess/: CMakeLists.txt  mainprocess.cpp  mainprocess.h
src/mainprocess/balloon/: CMakeLists.txt  balloon.cpp  balloon.h
src/mainprocess/balloon/balloonwidget/: CMakeLists.txt  balloonwidget.cpp  balloonwidget.h
src/mainprocess/balloon/balloonwidget/textarea/: CMakeLists.txt  textarea.cpp  textarea.h
src/mainprocess/ghost/: CMakeLists.txt  ghost.cpp  ghost.h
src/mainprocess/ghost/ghostwidget/: CMakeLists.txt  ghostwidget.cpp  ghostwidget.h
src/mainprocess/ghost/ghostwidget/hotspotwidget/: CMakeLists.txt  hotspot.cpp  hotspot.h  hotspotwidget.cpp  hotspotwidget.h
src/soundemitter/: CMakeLists.txt  soundemitter.cpp  soundemitter.h
src/surfacemanager/: CMakeLists.txt  surfacemanager.cpp  surfacemanager.h
src/surfacemanager/balloonsurface/: CMakeLists.txt  balloonsurface.cpp
src/surfacemanager/surface/: CMakeLists.txt  surface.cpp  surface.h
src/surfacemanager/surface/animation/: CMakeLists.txt  animation.cpp  animation.h
src/surfacemanager/surface/animation/frame/: CMakeLists.txt  frame.cpp  frame.h
src/surfacemanager/surface/hotspot/: CMakeLists.txt  hotspot.cpp
src/talkmanager/: CMakeLists.txt  talkmanager.cpp  talkmanager.h
src/talkmanager/tokencollection/: CMakeLists.txt
src/talkmanager/tokencollection/token/: token.cpp  token.h
src/variablestore/: CMakeLists.txt  variablestore.cpp  variablestore.h
src/workinstance/: CMakeLists.txt  workinstance.cpp  workinstance.h
src/workinstance/filereader/: CMakeLists.txt  filereader.cpp  filereader.h
src/workinstance/mainprocess/: CMakeLists.txt  mainprocess.cpp  mainprocess.h
src/workinstance/mainprocess/balloon/: balloon.cpp  balloon.h
src/workinstance/mainprocess/balloon/balloonwidget/: CMakeLists.txt  balloonwidget.cpp  balloonwidget.h
src/workinstance/mainprocess/balloon/balloonwidget/textarea/: CMakeLists.txt  textarea.cpp  textarea.h
src/workinstance/mainprocess/ghost/: ghost.cpp  ghost.h
src/workinstance/mainprocess/ghost/ghostwidget/: CMakeLists.txt  ghostwidget.cpp  ghostwidget.h
src/workinstance/mainprocess/ghost/ghostwidget/hotspotwidget/: hotspotwidget.cpp  hotspotwidget.h
src/workinstance/soundemitter/: soundemitter.cpp
src/workinstance/surfacemanager/: CMakeLists.txt  surfacemanager.cpp  surfacemanager.h
src/workinstance/surfacemanager/balloonsurface/: balloonsurface.h
src/workinstance/surfacemanager/surface/animation/: animation.h
src/workinstance/surfacemanager/surface/animation/frame/: CMakeLists.txt  frame.h
src/workinstance/surfacemanager/surface/hotspot/: CMakeLists.txt  hotspot.cpp  hotspot.h
src/workinstance/talkmanager/: talkmanager.cpp  talkmanager.h
src/workinstance/talkmanager/tokencollection/: tokencollection.cpp  tokencollection.h
src/workinstance/talkmanager/tokencollection/token/: CMakeLists.txt  token.h
src/workinstance/variablestore/: variablestore.cpp  variablestore.h
(+4 files in other folders)
